sumo/tests/traci/VariableRetrieval/Route/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa6 0xff dummy
simstep 6 1
